# aIogram-tamplate

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  settings.py
src/bot/: __init__.py  setup_commands.py  storage.py
src/bot/core/: enums.py  lexicon.py  session.py
src/bot/handlers/: __init__.py  common.py  database.py
src/bot/keyboards/: __init__.py  database.py  main.py
src/bot/middlewares/: i18n.py  trace.py
src/logger/: __init__.py  log_levels.py  logger.py
