[tool.poetry]
name = "Example"
version = "0.1.0"
description = ""
authors = ["Noloquideus <daniilmanukian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.2.1"
aiogram = "^3.20.0"
dotenv = "^0.9.9"
pydantic-settings = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
